Replace new Boolean(x) with Boolean.valueOf(x).  Other minor Boolean call optimizations.  Optimization extends to other types too.